--- a/index.html
+++ b/index.html
@@ -41,6 +41,16 @@
                 <span><input type="checkbox" id="invertCB"><label for="invertCB">Invert Colors</label></span>
                 <span><input type="checkbox" id="embossCB"><label for="embossCB">Show Emboss</label></span>
               </section>
+              <section id="info">
+                  This currently doesn't look like much has changed.
+                      in the back end I'm currently working on doing beat 
+                      detection algorithms - the white, red, and yellow graphs
+                      are a couple different ways of measuring loudness, and
+                      the orange lines are currently where it detects a beat.
+                      The next step is to do math with the differences between
+                      beats to calculate a bpm; then I can make elements pulse 
+                      or react to the actual beat, not just the raw volume.
+              </section>
         </div>
     </main>
 </body>
